Add jumping configuration settings

--- a/package.json
+++ b/package.json
@@ -42,6 +42,26 @@
                     "default": true,
                     "description": "Set to false to completely disable AutoPairs behavior."
                 },
+                "autopairs-code.jumping.enable": {
+                    "type": "boolean",
+                    "default": true,
+                    "description": "Set to false to completely disable jumping over closing brackets."
+                },
+                "autopairs-code.jumping.enableForBraces": {
+                    "type": "boolean",
+                    "default": true,
+                    "description": "Enable jumping over closing curly braces {}."
+                },
+                "autopairs-code.jumping.enableForBrackets": {
+                    "type": "boolean",
+                    "default": true,
+                    "description": "Enable jumping over closing square brackets []."
+                },
+                "autopairs-code.jumping.enableForParentheses": {
+                    "type": "boolean",
+                    "default": true,
+                    "description": "Enable jumping over closing parentheses ()."
+                },
                 "autopairs-code.spacing.enable": {
                     "type": "boolean",
                     "default": true,
