--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -13,8 +13,12 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: 12.x
+    - name: Start xvfb
+      run: /usr/bin/Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
     - run: npm install
     - run: npm run build --if-present
     - run: npm test
       env:
+        CODE_VERSION: ''
+        DISPLAY: ':99.0'
         CI: true
