--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "publisher": "jbhannah",
     "license": "MIT",
     "engines": {
-        "vscode": "^1.20.0"
+        "vscode": "^1.32.0"
     },
     "repository": {
         "type": "git",
@@ -90,14 +90,17 @@
         "vscode:prepublish": "npm run compile",
         "compile": "tsc -p ./",
         "watch": "tsc -watch -p ./",
-        "postinstall": "node ./node_modules/vscode/bin/install",
-        "test": "npm run compile && node ./node_modules/vscode/bin/test"
+        "test": "node ./out/test/runTest.js"
     },
     "devDependencies": {
+        "@types/glob": "^7.1.1",
         "@types/mocha": "^7.0.2",
-        "@types/node": "^13.9.5",
-        "tslint": "^6.0.0",
+        "@types/node": "^13.11.0",
+        "@types/vscode": "^1.32.0",
+        "glob": "^7.1.4",
+        "mocha": "^6.1.4",
+        "tslint": "^6.1.1",
         "typescript": "^3.8.3",
-        "vscode": "^1.1.36"
+        "vscode-test": "^1.3.0"
     }
 }
